--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <a href="form.html">Наступна сторінка</a>
             </nav>
         </header>
+        <main>
         <section>
             <dl>
                 <dt><b>Мед</b></dt>
@@ -74,9 +75,17 @@
                 <li>Еспарцетовий мед</li>
             </ul>
         </section>
+        </main>
         <footer>
             <nav>
                 <a href="form.html">Наступна сторінка</a>
+                <p>Зв'яжіться з нами, якщо Ви зацікалені сторінкою, або Вам сподобалась ідея, або Вам скучно і хочеться поговорити. Зв'жіться будь ласка ми дуже просимо. Ми самі готові заплатити за Ваш дзвінок</p>
+                <pre>Позвони мне, позвони!
+Позвони мне, ради бога!
+Через время протяни
+Голос тихий и глубокий…
+                </pre>
+                <img src="img/song.jpg" alt="womanWhoSings" width="300">
             </nav>
         </footer>
     </body>
