--- a/form.html
+++ b/form.html
@@ -62,25 +62,25 @@
                     <li>
                         Що п'єш?<br>
                         <label>
-                            <input type="radio" name="drink">Чай
+                            <input type="radio" name="tea">Чай
                         </label>
                         <label>
-                            <input type="radio" name="drink">Сік
+                            <input type="radio" name="juice">Сік
                         </label>
                         <label>
-                            <input type="radio" name="drink">Кава
+                            <input type="radio" name="coffee">Кава
                         </label>
                     </li>
                     <li>
                         Коли п'єш?<br>
                         <label>
-                            <input type="checkbox" name="day">Зранку
+                            <input type="checkbox" name="day" value="morning">Зранку
                         </label>
                         <label>
-                            <input type="checkbox" name="day">Обід
+                            <input type="checkbox" name="day" value="lunch">Обід
                         </label>
                         <label>
-                            <input type="checkbox" name="day">Вечір
+                            <input type="checkbox" name="day" value="evening">Вечір
                         </label>
                     </li>
                     <li>
